objects/VisitOps__Visit__c.object
<CustomObject>
    <fields>
        <fullName>VO_Any_concerns_you_have_about_the_visit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Any concerns you have about the visit?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VO_Average_Membership__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>How many members and how many subscribers?</inlineHelpText>
        <label>Average Membership</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VO_Existing_or_prospective_client__c</fullName>
        <inlineHelpText>Is this an existing or prospective client?</inlineHelpText>
        <label>Existing or prospective client?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Existing</fullName>
                </value>
                <value>
                    <fullName>Prospective</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VO_If_any_guests_need_parking_list_names__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If any guests need parking, please list the guest names</inlineHelpText>
        <label>If any guests need parking, list names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VO_If_so_which_hotel__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If so, which hotel?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VO_If_there_are_upsell_opp_what_are_they__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If there are any upsell opportunities, what are they?</inlineHelpText>
        <label>If there are upsell opps, what are they?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VO_Key_things_to_accomplish_during_visit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>What are some important things you need to accomplish during this visit? Is there something at the top of your priority list?</inlineHelpText>
        <label>Key things to accomplish during visit</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VO_Mission_Vision_Values_of_Client__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mission / Vision / Values of Client</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VO_Product_Outline__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Examples: Medical, Dental, Pharmacy, THTY, etc.</inlineHelpText>
        <label>Product Outline</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VO_Visit_Owner_Name__c</fullName>
        <description>Will display Visit Owners name if in the Owner Portal field or in the Visit Owner Lookup.</description>
        <formula>IF( VisitOps__Owner_Portal__c = &apos;&apos;,  VisitOps__VisitOwner__r.VisitOps__Full_Name__c , VisitOps__Owner_Portal__c)</formula>
        <label>Visit Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VO_Will_guests_be_flying_in_for_the_tour__c</fullName>
        <label>Will guests be flying in for the tour?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VO_Will_guests_be_staying_at_a_hotel__c</fullName>
        <label>Will guests be staying at a hotel?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VO_Will_you_want_name_tags_created__c</fullName>
        <label>Will you want name tags created?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Agenda_Approval_Status__c</fullName>
        <label>Agenda Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agenda Approval Requested</fullName>
                </value>
                <value>
                    <fullName>Agenda Approved</fullName>
                </value>
                <value>
                    <fullName>Agenda Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Agenda__c</fullName>
        <label>Agenda</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agenda draft complete</fullName>
                </value>
                <value>
                    <fullName>Agenda complete</fullName>
                </value>
                <value>
                    <fullName>Agenda issues exist</fullName>
                </value>
                <value>
                    <fullName>Presenters needed</fullName>
                </value>
                <value>
                    <fullName>Rooms needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Alternate_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternate Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Alternate_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__ApproverComments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approver Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__ApproverName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to User</description>
        <label>Leadership Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__ArrivalDateTimeLocationTZ__c</fullName>
        <description>This field stores the actual Arrival Time of Visit at the Location having this visit. Its based on Location Timezone</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Arrival Date and Time (Location)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__ArrivalDateTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Auto populates from Location field</inlineHelpText>
        <label>Arrival Date and Time (User)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisitOps__ArrivalMonth__c</fullName>
        <description>This fields helps to determine month of Arrival</description>
        <formula>VisitOps__ArrivalDateTime__c</formula>
        <label>Arrival Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__Arrival_Date_Location__c</fullName>
        <formula>DATETIMEVALUE(VisitOps__ArrivalDateTimeLocationTZ__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Arrival Date (Location)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__Arrival_Date_Time_Loc__c</fullName>
        <formula>DATETIMEVALUE(LEFT(VisitOps__ArrivalDateTimeLocationTZ__c,10)+&quot; &quot;+RIGHT(VisitOps__ArrivalDateTimeLocationTZ__c,8))-((DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 00:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 01:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 02:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 03:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 04:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 05:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 06:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 07:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 08:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 09:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 10:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 11:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 12:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 13:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 14:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 15:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 16:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 17:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 18:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 19:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 20:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 21:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 22:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 23:00:00&quot;)) - TODAY()))/24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Arrival Date Time Loc</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisitOps__Arrival_Date_and_Time_LocationFormula__c</fullName>
        <formula>IF(VALUE(LEFT(RIGHT(VisitOps__ArrivalDateTimeLocationTZ__c,8),2)) == 00, 
LEFT(RIGHT(VisitOps__ArrivalDateTimeLocationTZ__c,14),2) 
+ &apos;/&apos; + LEFT(RIGHT(VisitOps__ArrivalDateTimeLocationTZ__c,11),2) 
+ &apos;/&apos; + LEFT(VisitOps__ArrivalDateTimeLocationTZ__c,4) 
+ &apos; &apos; + TEXT(VALUE(LEFT(RIGHT(VisitOps__ArrivalDateTimeLocationTZ__c,8),2))+12) 
+ &apos;:&apos; + LEFT(RIGHT(VisitOps__ArrivalDateTimeLocationTZ__c,5),2) 
+ &apos; &apos; + &apos;AM&apos;,IF(VALUE(LEFT(RIGHT(VisitOps__ArrivalDateTimeLocationTZ__c,8),2)) == 12, 
LEFT(RIGHT(VisitOps__ArrivalDateTimeLocationTZ__c,14),2) 
+ &apos;/&apos; + LEFT(RIGHT(VisitOps__ArrivalDateTimeLocationTZ__c,11),2) 
+ &apos;/&apos; + LEFT(VisitOps__ArrivalDateTimeLocationTZ__c,4) 
+ &apos; &apos; + TEXT(VALUE(LEFT(RIGHT(VisitOps__ArrivalDateTimeLocationTZ__c,8),2))) 
+ &apos;:&apos; + LEFT(RIGHT(VisitOps__ArrivalDateTimeLocationTZ__c,5),2) 
+ &apos; &apos; + &apos;PM&apos;,IF(VALUE(LEFT(RIGHT(VisitOps__ArrivalDateTimeLocationTZ__c,8),2)) &lt; 12, 
LEFT(RIGHT(VisitOps__ArrivalDateTimeLocationTZ__c,14),2) 
+ &apos;/&apos; + LEFT(RIGHT(VisitOps__ArrivalDateTimeLocationTZ__c,11),2) 
+ &apos;/&apos; + LEFT(VisitOps__ArrivalDateTimeLocationTZ__c,4) 
+ &apos; &apos; + LEFT(RIGHT(VisitOps__ArrivalDateTimeLocationTZ__c,8),2) 
+ &apos;:&apos; + LEFT(RIGHT(VisitOps__ArrivalDateTimeLocationTZ__c,5),2) 
+ &apos; &apos; + &apos;AM&apos;, 
LEFT(RIGHT(VisitOps__ArrivalDateTimeLocationTZ__c,14),2) 
+ &apos;/&apos; + LEFT(RIGHT(VisitOps__ArrivalDateTimeLocationTZ__c,11),2) 
+ &apos;/&apos; + LEFT(VisitOps__ArrivalDateTimeLocationTZ__c,4) 
+ &apos; &apos; + TEXT(VALUE(LEFT(RIGHT(VisitOps__ArrivalDateTimeLocationTZ__c,8),2))-12) 
+ &apos;:&apos; + LEFT(RIGHT(VisitOps__ArrivalDateTimeLocationTZ__c,5),2) 
+ &apos; &apos; + &apos;PM&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Arrival Date and Time (Location)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__CancellationComments__c</fullName>
        <description>This is to add Cancellation Comments when Reason for Cancellation is selected as &apos;Other&apos;</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cancellation Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Catering_Status__c</fullName>
        <label>Catering Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Special catering needed/not ordered</fullName>
                </value>
                <value>
                    <fullName>Catering requested</fullName>
                </value>
                <value>
                    <fullName>Catering Confirmed</fullName>
                </value>
                <value>
                    <fullName>No catering needed</fullName>
                </value>
                <value>
                    <fullName>Catering issues exist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__CellPhone__c</fullName>
        <description>This Field will show the phone number of Visit Owner.</description>
        <formula>VisitOps__VisitOwner__r.Phone</formula>
        <label>Cell Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Cell_Phone__c</fullName>
        <description>This field is no longer used</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>VisitOps__Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Cost_Center_Department__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cost Center (Department)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Decision_Survey_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, you will receive an email after a decision has been made on an opportunity associated with this visit asking which attendee should receive the decision survey.</inlineHelpText>
        <label>Decision Survey Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__DepartureDateTimeLocationTZ__c</fullName>
        <description>This field stores the actual Departure Time of Visit at the Location having this visit. Its based on Location Timezone</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Departure Date and Time (Location)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__DepartureDateTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Auto populates from Location field</inlineHelpText>
        <label>Departure Date and Time (User)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisitOps__Departure_Date_Location__c</fullName>
        <formula>DATETIMEVALUE(VisitOps__DepartureDateTimeLocationTZ__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Departure Date (Location)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__Departure_Date_and_Time_LocationFormula__c</fullName>
        <formula>IF(VALUE(LEFT(RIGHT(VisitOps__DepartureDateTimeLocationTZ__c,8),2)) == 00, 
LEFT(RIGHT(VisitOps__DepartureDateTimeLocationTZ__c,14),2) 
+ &apos;/&apos; + LEFT(RIGHT(VisitOps__DepartureDateTimeLocationTZ__c,11),2) 
+ &apos;/&apos; + LEFT(VisitOps__DepartureDateTimeLocationTZ__c,4) 
+ &apos; &apos; + TEXT(VALUE(LEFT(RIGHT(VisitOps__DepartureDateTimeLocationTZ__c,8),2))+12) 
+ &apos;:&apos; + LEFT(RIGHT(VisitOps__DepartureDateTimeLocationTZ__c,5),2) 
+ &apos; &apos; + &apos;AM&apos;,IF(VALUE(LEFT(RIGHT(VisitOps__DepartureDateTimeLocationTZ__c,8),2)) == 12, 
LEFT(RIGHT(VisitOps__DepartureDateTimeLocationTZ__c,14),2) 
+ &apos;/&apos; + LEFT(RIGHT(VisitOps__DepartureDateTimeLocationTZ__c,11),2) 
+ &apos;/&apos; + LEFT(VisitOps__DepartureDateTimeLocationTZ__c,4) 
+ &apos; &apos; + TEXT(VALUE(LEFT(RIGHT(VisitOps__DepartureDateTimeLocationTZ__c,8),2))) 
+ &apos;:&apos; + LEFT(RIGHT(VisitOps__DepartureDateTimeLocationTZ__c,5),2) 
+ &apos; &apos; + &apos;PM&apos;,IF(VALUE(LEFT(RIGHT(VisitOps__DepartureDateTimeLocationTZ__c,8),2)) &lt; 12, 
LEFT(RIGHT(VisitOps__DepartureDateTimeLocationTZ__c,14),2) 
+ &apos;/&apos; + LEFT(RIGHT(VisitOps__DepartureDateTimeLocationTZ__c,11),2) 
+ &apos;/&apos; + LEFT(VisitOps__DepartureDateTimeLocationTZ__c,4) 
+ &apos; &apos; + LEFT(RIGHT(VisitOps__DepartureDateTimeLocationTZ__c,8),2) 
+ &apos;:&apos; + LEFT(RIGHT(VisitOps__DepartureDateTimeLocationTZ__c,5),2) 
+ &apos; &apos; + &apos;AM&apos;, 
LEFT(RIGHT(VisitOps__DepartureDateTimeLocationTZ__c,14),2) 
+ &apos;/&apos; + LEFT(RIGHT(VisitOps__DepartureDateTimeLocationTZ__c,11),2) 
+ &apos;/&apos; + LEFT(VisitOps__DepartureDateTimeLocationTZ__c,4) 
+ &apos; &apos; + TEXT(VALUE(LEFT(RIGHT(VisitOps__DepartureDateTimeLocationTZ__c,8),2))-12) 
+ &apos;:&apos; + LEFT(RIGHT(VisitOps__DepartureDateTimeLocationTZ__c,5),2) 
+ &apos; &apos; + &apos;PM&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Departure Date and Time (Location)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__DetailAnyChangesToAgenda__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Detail any changes to agenda</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Divison__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Divison</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__DressCode__c</fullName>
        <label>Dress Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Casual</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Casual</fullName>
                </value>
                <value>
                    <fullName>Cocktail</fullName>
                </value>
                <value>
                    <fullName>Formal/Black Tie</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Email__c</fullName>
        <description>The old Formula field is deleted and new Text field is added</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VisitOps__End_Time__c</fullName>
        <description>Date Type Field for Calendar Page</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__Expenses__c</fullName>
        <label>Expenses</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoices needed</fullName>
                </value>
                <value>
                    <fullName>Expenses entered</fullName>
                </value>
                <value>
                    <fullName>Expense issues exist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Facilities_Status__c</fullName>
        <label>Facilities Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Facilities services needed / not arranged</fullName>
                </value>
                <value>
                    <fullName>Facilities services requested</fullName>
                </value>
                <value>
                    <fullName>Facilities services arranged</fullName>
                </value>
                <value>
                    <fullName>Facilities services not needed</fullName>
                </value>
                <value>
                    <fullName>Facilities issues exist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Gifts_Status__c</fullName>
        <label>Gifts Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gifts needed / not ordered</fullName>
                </value>
                <value>
                    <fullName>Gifts requested</fullName>
                </value>
                <value>
                    <fullName>Gifts confirmed</fullName>
                </value>
                <value>
                    <fullName>Gifts not needed</fullName>
                </value>
                <value>
                    <fullName>Gift issues exist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Ground_Transportation_Status__c</fullName>
        <label>Ground Transportation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ground transportation partially arranged</fullName>
                </value>
                <value>
                    <fullName>Ground transportation requested</fullName>
                </value>
                <value>
                    <fullName>Ground transportation arranged</fullName>
                </value>
                <value>
                    <fullName>Ground transportation not needed</fullName>
                </value>
                <value>
                    <fullName>Ground transportation issues exist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Invite_Update_Count__c</fullName>
        <label>Invite Update Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__IsAgendaApprovedByCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agenda approved by Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__IsAgendaApprovedByOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agenda approved by Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__IsPreSurveyRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Survey Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__IsVisitApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visit Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Is_Cloned_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Cloned Visit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Items_to_Remember__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Items to Remember</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Leadership_Approval_Status__c</fullName>
        <label>Leadership Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Leadership Approval Requested</fullName>
                </value>
                <value>
                    <fullName>Leadership Approved</fullName>
                </value>
                <value>
                    <fullName>Leadership Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Higher Education</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__LocationNameFormula__c</fullName>
        <formula>VisitOps__Location__r.Name</formula>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Location_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Location Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VisitOps__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>VisitOps__Location__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Lodging_Status__c</fullName>
        <label>Lodging Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lodging needed / not ordered</fullName>
                </value>
                <value>
                    <fullName>Lodging requested</fullName>
                </value>
                <value>
                    <fullName>Lodging confirmed</fullName>
                </value>
                <value>
                    <fullName>Lodging not needed</fullName>
                </value>
                <value>
                    <fullName>Lodging issues exist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__MeasureOfSuccess__c</fullName>
        <description>This field is appliable for Type  = Customer visit</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Measure of Success</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__ModeOfTransportation__c</fullName>
        <label>Mode of Transportation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Driving</fullName>
                </value>
                <value>
                    <fullName>Lyft</fullName>
                </value>
                <value>
                    <fullName>Private Aircraft</fullName>
                </value>
                <value>
                    <fullName>Taxi</fullName>
                </value>
                <value>
                    <fullName>Uber</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__MultiSelect__c</fullName>
        <label>MultiSelect</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__OffSiteAddress__c</fullName>
        <description>This field is appliable for Type = Off-Site Visit</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Off-Site Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__OffSiteContactEmail__c</fullName>
        <description>This field is appliable for Type = Off-Site Visit</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Off-Site Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VisitOps__OffSiteContactName__c</fullName>
        <description>This field is appliable for Type = Off-Site Visit</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Off-Site Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__OffSiteContactPhone__c</fullName>
        <description>This field is appliable for Type = Off-Site Visit</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Off-Site Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>VisitOps__OffSiteLocationName__c</fullName>
        <description>This field is applicable only for Type = Off-Site Visit</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Off-Site Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>